# Pythia8

./: AUTHORS  Analysis.cc  Analysis.h  Analysis.man  Basics.cc  Basics.h  Basics.man  Beams.cc  Beams.h  Beams.man  CMakeLists.txt  CODINGSTYLE  Event.cc  Event.h  Event.man  FragmentationFlavZpT.cc  FragmentationFlavZpT.h  FragmentationFlavZpT.man  FragmentationSystems.cc  FragmentationSystems.h  FragmentationSystems.man  HadronLevel.cc  HadronLevel.h  HadronLevel.man  LesHouches.cc  LesHouches.h  LesHouches.man  Main.man  Makefile  Makefile.msc  MiniStringFragmentation.cc  MiniStringFragmentation.h  MiniStringFragmentation.man  MultipleInteractions.cc  MultipleInteractions.h  MultipleInteractions.man  ParticleData.cc  ParticleData.h  ParticleData.man  ParticleDecays.cc  (+59 more)
doc/: AccessPYTHIA6Processes.html  AccessPYTHIA6Processes.xml  Analysis.html  Analysis.xml  BeamRemnants.html  BeamRemnants.xml  Comments.html  Comments.xml  ElectroweakProcesses.html  Event.html  Event.xml  EventAnalysis.html  EventAnalysis.xml  EventInfo.html  EventInfo.xml  EventInformation.html  EventInformation.xml  EventRecord.html  EventRecord.xml  EventStatistics.html  EventStatistics.xml  ExternalDecays.html  ExternalDecays.xml  Files.html  Files.xml  FlavourSelection.html  FlavourSelection.xml  Flow.html  Flow.xml  FourVector.html  FourVector.xml  FourVectors.html  FourVectors.xml  Fragmentation.html  Fragmentation.xml  Front.html  Front.xml  FrontSave.html  Frontpage.html  Frontpage.xml  (+106 more)
examples/: CombineMatchingInput.h  GeneratorInput.h  JetMatching.h  LHAupAlpgen.h  MLMhooks.h  Makefile  README  botinfile  configure  main01.cc  main01.cmnd  main01.py  main02.cc  main03.cc  main03.cmnd  main04.cc  main04.cmnd  main05.cc  main06.cc  main06.cmnd  main07.cc  main07.cmnd  main08.cc  main09.cc  main10.cc  main10.py  main101.cc  main102.cc  main103.cc  main11.cc  main11.cmnd  main111.cc  main112.cc  main113.cc  main12.cc  main12.ccmnd  main12.cmnd  main12.fcmnd  main121.cc  main13.cc  (+169 more)
hepmcinterface/: HepMCInterface.cc  I_Pythia8.cc  I_Pythia8.cc~
htmldoc/: ASecondHardProcess.html  AccessPYTHIA6Processes.html  AdvancedUsage.html  AlpgenAndMLM.html  AlpgenEventInterface.html  BeamParameters.html  BeamRemnants.html  BeamShape.html  Bibliography.html  BoseEinsteinEffects.html  CKKWLMerging.html  CompositenessProcesses.html  CouplingsAndScales.html  Diffraction.html  ElectroweakProcesses.html  ErrorChecks.html  EventAnalysis.html  EventInformation.html  EventRecord.html  EventStatistics.html  ExternalDecays.html  ExtraDimensionalProcesses.html  FlavourSelection.html  FourVectors.html  FourthGenerationProcesses.html  Fragmentation.html  Frontpage.html  GenericSettings.html  Glossary.html  HadronLevelStandalone.html  HadronScattering.html  HepMCInterface.html  HiddenValleyProcesses.html  HiggsProcesses.html  Histograms.html  ImplementAProcess.html  ImplementNewShowers.html  Index.html  JetFinders.html  JetMatching.html  (+51 more)
include/: Analysis.h  Basics.h  BeamParticle.h  BeamRemnants.h  BeamShape.h  Beams.h  BoseEinstein.h  Event.h  FragmentationFlavZpT.h  FragmentationSystems.h  HadronLevel.h  HadronScatter.h  HelicityBasics.h  HelicityMatrixElements.h  HepMCInterface.h  HiddenValleyFragmentation.h  History.h  I_Pythia8.h  InFlux.h  Info.h  Information.h  LHAFortran.h  LHAPDFInterface.h  LesHouches.h  MergingHooks.h  MiniStringFragmentation.h  MultipartonInteractions.h  MultipleInteractions.h  ParticleData.h  ParticleDecays.h  PartonDistributions.h  PartonLevel.h  PartonSystems.h  PhaseSpace.h  ProcessContainer.h  ProcessLevel.h  Pythia.h  Pythia6.h  Pythia6Interface.h  PythiaComplex.h  (+30 more)
lhapdfdummy/: LHAPDFDummy.cc
phpdoc/: ASecondHardProcess.php  AccessPYTHIA6Processes.php  AdvancedUsage.php  AlpgenAndMLM.php  AlpgenEventInterface.php  BeamParameters.php  BeamRemnants.php  BeamShape.php  Bibliography.php  BoseEinsteinEffects.php  CKKWLMerging.php  CompositenessProcesses.php  CouplingsAndScales.php  Diffraction.php  ElectroweakProcesses.php  ErrorChecks.php  EventAnalysis.php  EventInformation.php  EventRecord.php  EventStatistics.php  ExternalDecays.php  ExtraDimensionalProcesses.php  FlavourSelection.php  FourVectors.php  FourthGenerationProcesses.php  Fragmentation.php  Frontpage.php  GenericSettings.php  Glossary.php  HadronLevelStandalone.php  HadronScattering.php  HepMCInterface.php  HiddenValleyProcesses.php  HiggsProcesses.php  Histograms.php  ImplementAProcess.php  ImplementNewShowers.php  Index.php  JetFinders.php  JetMatching.php  (+51 more)
pythia6/: Pythia6.f  pythia6407.update  pythia6409.update
pythia8tohepmc/: Pythia8ToHepMC.cc
rootexamples/: Makefile  README  hist.cc  pythiaROOT.h  tree.cc
src/: Analysis.cc  Basics.cc  BeamParticle.cc  BeamRemnants.cc  BeamSetup.cc  BeamShape.cc  Beams.cc  BoseEinstein.cc  ColourReconnection.cc  ColourTracing.cc  DeuteronProduction.cc  Dire.cc  DireBasics.cc  DireHistory.cc  DireMG5MEs.cc  DireMerging.cc  DireMergingHooks.cc  DireSpace.cc  DireSplitInfo.cc  DireSplittingLibrary.cc  DireSplittings.cc  DireSplittingsEW.cc  DireSplittingsQCD.cc  DireSplittingsQED.cc  DireSplittingsU1new.cc  DireTimes.cc  DireWeightContainer.cc  Event.cc  ExternalMEs.cc  FJcore.cc  FragmentationFlavZpT.cc  FragmentationSystems.cc  GammaKinematics.cc  HIInfo.cc  HINucleusModel.cc  HISubCollisionModel.cc  HIUserHooks.cc  HadronLevel.cc  HadronScatter.cc  HadronWidths.cc  (+93 more)
xmldoc/: ASecondHardProcess.xml  AccessPYTHIA6Processes.xml  AdvancedUsage.xml  AlpgenEventInterface.xml  BeamParameters.xml  BeamRemnants.xml  BeamShape.xml  Bibliography.xml  BoseEinsteinEffects.xml  CompositenessProcesses.xml  CouplingsAndScales.xml  Diffraction.xml  ElectroweakProcesses.xml  ErrorChecks.xml  EventAnalysis.xml  EventInformation.xml  EventRecord.xml  EventStatistics.xml  ExternalDecays.xml  ExtraDimensionalProcesses.xml  FlavourSelection.xml  FourVectors.xml  FourthGenerationProcesses.xml  Fragmentation.xml  Frontpage.xml  GenericSettings.xml  Glossary.xml  HadronLevelStandalone.xml  HadronScattering.xml  HepMCInterface.xml  HiddenValleyProcesses.xml  HiggsProcesses.xml  Histograms.xml  Index.xml  (+65 more)
(+734 files in other folders)
