# Check if cmake has the required version
CMAKE_MINIMUM_REQUIRED(VERSION 3.16.3 FATAL_ERROR)

set(PROJECT_NAME Pythia8)
project(${PROJECT_NAME})

include_directories(${CMAKE_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(HEADERS
  include/Pythia8/Analysis.h
  include/Pythia8/Basics.h
  include/Pythia8/BeamParticle.h
  include/Pythia8/BeamRemnants.h
  include/Pythia8/BeamShape.h
  include/Pythia8/BoseEinstein.h
  include/Pythia8/ColourReconnection.h
  include/Pythia8/ColourTracing.h
  include/Pythia8/DeuteronProduction.h
  include/Pythia8/Dire.h
  include/Pythia8/DireBasics.h
  include/Pythia8/DireHistory.h
  include/Pythia8/DireHooks.h
  include/Pythia8/DireMerging.h
  include/Pythia8/DireMergingHooks.h
  include/Pythia8/DireSpace.h
  include/Pythia8/DireSplitInfo.h
  include/Pythia8/DireSplittingLibrary.h
  include/Pythia8/DireSplittings.h
  include/Pythia8/DireSplittingsEW.h
  include/Pythia8/DireSplittingsQCD.h
  include/Pythia8/DireSplittingsQED.h
  include/Pythia8/DireSplittingsU1new.h
  include/Pythia8/DireTimes.h
  include/Pythia8/DireWeightContainer.h
  include/Pythia8/Event.h
  include/Pythia8/FJcore.h
  include/Pythia8/FragmentationFlavZpT.h
  include/Pythia8/FragmentationSystems.h
  include/Pythia8/GammaKinematics.h
  include/Pythia8/HadronLevel.h
  include/Pythia8/HadronWidths.h
  include/Pythia8/HardDiffraction.h
  include/Pythia8/HeavyIons.h
  include/Pythia8/HelicityBasics.h
  include/Pythia8/HelicityMatrixElements.h
  include/Pythia8/HiddenValleyFragmentation.h
  include/Pythia8/History.h
  include/Pythia8/HIUserHooks.h
  include/Pythia8/Info.h
  include/Pythia8/JunctionSplitting.h
  include/Pythia8/LesHouches.h
  include/Pythia8/LHEF3.h
  include/Pythia8/LowEnergyProcess.h
  include/Pythia8/LowEnergySigma.h
  include/Pythia8/MathTools.h
  include/Pythia8/Merging.h
  include/Pythia8/MergingHooks.h
  include/Pythia8/MiniStringFragmentation.h
  include/Pythia8/MultipartonInteractions.h
  include/Pythia8/NucleonExcitations.h
  include/Pythia8/ParticleData.h
  include/Pythia8/ParticleDecays.h
  include/Pythia8/PartonDistributions.h
  include/Pythia8/PartonLevel.h
  include/Pythia8/PartonSystems.h
  include/Pythia8/PartonVertex.h
  include/Pythia8/PhaseSpace.h
  include/Pythia8/PhysicsBase.h
  include/Pythia8/ProcessContainer.h
  include/Pythia8/ProcessLevel.h
  include/Pythia8/Pythia.h
  include/Pythia8/PythiaComplex.h
  include/Pythia8/PythiaStdlib.h
  include/Pythia8/ResonanceDecays.h
  include/Pythia8/ResonanceWidths.h
  include/Pythia8/ResonanceWidthsDM.h
  include/Pythia8/RHadrons.h
  include/Pythia8/Ropewalk.h
  include/Pythia8/Settings.h
  include/Pythia8/SharedPointers.h
  include/Pythia8/ShowerMEs.h
  include/Pythia8/ShowerModel.h
  include/Pythia8/SigmaCompositeness.h
  include/Pythia8/SigmaDM.h
  include/Pythia8/SigmaEW.h
  include/Pythia8/SigmaExtraDim.h
  include/Pythia8/SigmaGeneric.h
  include/Pythia8/SigmaHiggs.h
  include/Pythia8/SigmaLeftRightSym.h
  include/Pythia8/SigmaLeptoquark.h
  include/Pythia8/SigmaNewGaugeBosons.h
  include/Pythia8/SigmaOnia.h
  include/Pythia8/SigmaProcess.h
  include/Pythia8/SigmaQCD.h
  include/Pythia8/SigmaSUSY.h
  include/Pythia8/SigmaTotal.h
  include/Pythia8/SimpleSpaceShower.h
  include/Pythia8/SimpleTimeShower.h
  include/Pythia8/SimpleWeakShowerMEs.h
  include/Pythia8/SLHAinterface.h
  include/Pythia8/SpaceShower.h
  include/Pythia8/StandardModel.h
  include/Pythia8/Streams.h
  include/Pythia8/StringFragmentation.h
  include/Pythia8/StringInteractions.h
  include/Pythia8/StringLength.h
  include/Pythia8/SusyCouplings.h
  include/Pythia8/SusyLesHouches.h
  include/Pythia8/SusyResonanceWidths.h
  include/Pythia8/SusyWidthFunctions.h
  include/Pythia8/TauDecays.h
  include/Pythia8/TimeShower.h
  include/Pythia8/UserHooks.h
  include/Pythia8/Vincia.h
  include/Pythia8/VinciaAntennaFunctions.h
  include/Pythia8/VinciaCommon.h
  include/Pythia8/VinciaDiagnostics.h
  include/Pythia8/VinciaFSR.h
  include/Pythia8/VinciaISR.h
  include/Pythia8/VinciaQED.h
  include/Pythia8/VinciaWeights.h
  include/Pythia8/Weights.h
)

set(SOURCES
  src/Analysis.cc
  src/Basics.cc
  src/BeamParticle.cc
  src/BeamRemnants.cc
  src/BeamSetup.cc
  src/BeamShape.cc
  src/BoseEinstein.cc
  src/ColourReconnection.cc
  src/ColourTracing.cc
  src/DeuteronProduction.cc
  src/Dire.cc
  src/DireBasics.cc
  src/DireHistory.cc
  src/DireMerging.cc
  src/DireMergingHooks.cc
  src/DireSpace.cc
  src/DireSplitInfo.cc
  src/DireSplittingLibrary.cc
  src/DireSplittings.cc
  src/DireSplittingsEW.cc
  src/DireSplittingsQCD.cc
  src/DireSplittingsQED.cc
  src/DireSplittingsU1new.cc
  src/DireTimes.cc
  src/DireWeightContainer.cc
  src/Event.cc
  src/ExternalMEs.cc
  src/FJcore.cc
  src/FragmentationFlavZpT.cc
  src/FragmentationSystems.cc
  src/GammaKinematics.cc
  src/HadronLevel.cc
  src/HadronWidths.cc
  src/HardDiffraction.cc
  src/HeavyIons.cc
  src/HelicityBasics.cc
  src/HelicityMatrixElements.cc
  src/HiddenValleyFragmentation.cc
  src/HIInfo.cc
  src/HINucleusModel.cc
  src/History.cc
  src/HISubCollisionModel.cc
  src/Info.cc
  src/JunctionSplitting.cc
  src/LesHouches.cc
  src/LHEF3.cc
  src/Logger.cc
  src/LowEnergyProcess.cc
  src/MathTools.cc
  src/Merging.cc
  src/MergingHooks.cc
  src/MiniStringFragmentation.cc
  src/MultipartonInteractions.cc
  src/NucleonExcitations.cc
  src/ParticleData.cc
  src/ParticleDecays.cc
  src/PartonDistributions.cc
  src/PartonLevel.cc
  src/PartonSystems.cc
  src/PartonVertex.cc
  src/PhaseSpace.cc
  src/PhysicsBase.cc
  src/Plugins.cc
  src/ProcessContainer.cc
  src/ProcessLevel.cc
  src/Pythia.cc
  src/PythiaParallel.cc
  src/PythiaStdlib.cc
  src/ResonanceDecays.cc
  src/ResonanceWidths.cc
  src/ResonanceWidthsDM.cc
  src/RHadrons.cc
  src/Ropewalk.cc
  src/Settings.cc
  src/ShowerModel.cc
  src/SigmaCompositeness.cc
  src/SigmaDM.cc
  src/SigmaEW.cc
  src/SigmaExtraDim.cc
  src/SigmaGeneric.cc
  src/SigmaHiggs.cc
  src/SigmaLeftRightSym.cc
  src/SigmaLeptoquark.cc
  src/SigmaLowEnergy.cc
  src/SigmaNewGaugeBosons.cc
  src/SigmaOnia.cc
  src/SigmaProcess.cc
  src/SigmaQCD.cc
  src/SigmaSUSY.cc
  src/SigmaTotal.cc
  src/SimpleSpaceShower.cc
  src/SimpleTimeShower.cc
  src/SimpleWeakShowerMEs.cc
  src/SLHAinterface.cc
  src/SplittingsOnia.cc
  src/StandardModel.cc
  src/Streams.cc
  src/StringFragmentation.cc
  src/StringInteractions.cc
  src/StringLength.cc
  src/SusyCouplings.cc
  src/SusyLesHouches.cc
  src/SusyResonanceWidths.cc
  src/SusyWidthFunctions.cc
  src/TauDecays.cc
  src/UserHooks.cc
  src/Vincia.cc
  src/VinciaAntennaFunctions.cc
  src/VinciaCommon.cc
  src/VinciaDiagnostics.cc
  src/VinciaEW.cc
  src/VinciaFSR.cc
  src/VinciaHistory.cc
  src/VinciaISR.cc
  src/VinciaMerging.cc
  src/VinciaMergingHooks.cc
  src/VinciaQED.cc
  src/VinciaTrialGenerators.cc
  src/VinciaWeights.cc
  src/Weights.cc
  src/Win32Defs.cc
)

add_library(libPythia8 STATIC  ${SOURCES})
add_compile_definitions(XMLDIR=\"share/Pythia8/xmldoc\")

if(MSVC)
  add_custom_command(TARGET libPythia8 POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_BINARY_DIR}/$<CONFIG>/libPythia8.lib
                                     ${CMAKE_CURRENT_BINARY_DIR}/lib/
  )
endif()


